# eform-data-collection

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  amc-backend.land_info.json  app.py  blueprint.py  config.py  container.py  doan_duong_Dong_Nai.xlsx  doan_duong_Ha_Noi.xlsx  doan_duong_Ho_Chi_Minh.xlsx  docker-compose.yml  gunicorn_config.py  pyproject.toml  sync.py  test_collected_records.json  test_record_2.json  test_record_3.json  test_record_4.json  test_records_delete_patch.json  test_resolve_base_unmapped.json  wsgi.py
alembic/: env.py
alembic/versions/: 44c5074aeb41_initial.py  9e44ef3420eb_initial.py  a3f82e1c9b04_add_source_record_ids_to_verification_log.py  d17c55fb0d71_add_loai_kiem_tra_to_verification_log.py
docs/: features.md  ui-implementation-checklist.md  ui-update-plan.md  workflow.md
src/: streamlit_app.py
src/clients/: collection_client.py
src/config/: static_config.py
src/config/env/: dev.ini  prod.ini
src/config/postgresql/: postgresql_client.py
src/controller/: eform_controller.py
src/models/: eform_models.py
src/repository/: eform_repository.py
src/service/: assigner_service.py  classifier_service.py  importer_service.py  reporter_service.py  syncer_service.py  verifier_service.py
src/utils/: text.py
tests/: conftest.py
tests/integration/: test_importer_service.py  test_reporter_service.py  test_verifier_orchestration.py
tests/unit/: test_assigner.py  test_classifier.py  test_importer.py  test_text.py  test_verifier.py
