[project]
name = "eform-data-collection"
version = "0.1.0"
description = "E-Form Data Collection Management Module"
authors = [
    { name = "Tinh Pham", email = "TinhPT@hdbankamc.com.vn" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)",
    "dependency-injector (>=4.47.1,<5.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "typing-extensions (>=4.14.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "streamlit (>=1.35.0,<2.0.0)",
]

[tool.poetry]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-postgresql = ">=6.0.0,<7.0.0"
pytest-cov = ">=5.0.0,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
